# GPU-Virtualization-Benchmarks

./: .gitignore  README.md  benchmark  virbench.sh
benchmarks/parboil_stream/: CMakeLists.txt  clean.sh  compile.sh  datasets
benchmarks/parboil_stream/benchmarks/: CMakeLists.txt  interface.h
benchmarks/parboil_stream/benchmarks/cutcp/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/cutcp/tools/: compare-output
benchmarks/parboil_stream/benchmarks/lbm/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/mri-q/tools/: compare-output
benchmarks/parboil_stream/benchmarks/sad/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/sgemm/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/sgemm/tools/: compare-output
benchmarks/parboil_stream/benchmarks/spmv/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/spmv/tools/: compare-output
benchmarks/parboil_stream/benchmarks/stencil/: CMakeLists.txt
benchmarks/parboil_stream/benchmarks/tpacf/: CMakeLists.txt
benchmarks/parboil_stream/common/: CMakeLists.txt
benchmarks/parboil_stream/common/platform/: cuda.default.mk
benchmarks/parboil_stream/common/src/: parboil_cuda.c
benchmarks/parboil_stream/pairs/: CMakeLists.txt  main.cu
benchmarks/parboil_stream/scripts/: build.sh  clean.sh  gpgpusim.config  kernel_launch.sh  kernel_loop.sh  kernel_pair.sh  link.sh  run-full.sh  run.sh
benchmarksv2/: .gitignore  CMakeLists.txt  README.md  framework.h  main.cu
benchmarksv2/cutlass/: CMakeLists.txt  Makefile  cutlass.cu  interface.h
benchmarksv2/cutlass/cutlass/gemm/: gemm.h  gemm_traits.h  identity_block_swizzle.h
benchmarksv2/cutlass/gemm-test/: gemm.h  gemm_testbed.h  hgemm_tests.h  sgemm_tests.h  wmma_tests.h
benchmarksv2/cutlass/input/sgemm/: DESCRIPTION
benchmarksv2/cutlass/input/wmma/: DESCRIPTION
benchmarksv2/cutlass/util/: device_memory.h
benchmarksv2/exp-inputs/rtx2070/: sgemm-large.txt  sgemm.txt  wmma-large.txt  wmma.txt
benchmarksv2/exp-inputs/v100/: sgemm-large.txt  sgemm.txt  wmma-large.txt  wmma.txt
benchmarksv2/glue/nvidia/: binomialOptions_kernel.cu  nvidia.cpp
benchmarksv2/nvidia/: CMakeLists.txt  interface.h
benchmarksv2/nvidia/BlackScholes/: BlackScholes.cu  CMakeLists.txt
benchmarksv2/nvidia/FDTD3d/: CMakeLists.txt
benchmarksv2/nvidia/FDTD3d/inc/: FDTD3dGPU.h  FDTD3dGPUKernel.cuh
benchmarksv2/nvidia/FDTD3d/src/: FDTD3d.cpp  FDTD3dGPU.cu
benchmarksv2/nvidia/SobolQRNG/: CMakeLists.txt  sobol.cpp  sobol_gpu.cu  sobol_gpu.h
benchmarksv2/nvidia/binomialOptions/: CMakeLists.txt  binomialOptions.cpp  binomialOptions_kernel.cu
benchmarksv2/nvidia/convolutionSeparable/: CMakeLists.txt  convolutionSeparable.cu  convolutionSeparable_common.h  main.cpp
benchmarksv2/nvidia/dxtc/: CMakeLists.txt  dxtc.cu
benchmarksv2/nvidia/dxtc/data/: lena_std.dds
benchmarksv2/nvidia/interval/: CMakeLists.txt  interval.cu
benchmarksv2/nvidia/stereoDisparity/: CMakeLists.txt  stereoDisparity.cu  stereoDisparity_kernel.cuh
benchmarksv2/parboil/: .gitignore  CMakeLists.txt
benchmarksv2/parboil/benchmarks/: CMakeLists.txt  interface.h
benchmarksv2/parboil/benchmarks/bfs/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/bfs/src/: main.cu
benchmarksv2/parboil/benchmarks/cutcp/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/cutcp/src/: cutoff.h  cutoff6overlap.cu  main.cu  output.h
benchmarksv2/parboil/benchmarks/histo/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/histo/src/: main.cu
benchmarksv2/parboil/benchmarks/lbm/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/lbm/src/: common.h  lbm.cu  lbm.h  main.cc
benchmarksv2/parboil/benchmarks/mri-gridding/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/mri-gridding/src/: main.cu
benchmarksv2/parboil/benchmarks/mri-q/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/mri-q/src/: computeQ.cu  main.cu
benchmarksv2/parboil/benchmarks/sad/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/sad/src/: main.cu
benchmarksv2/parboil/benchmarks/sgemm/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/sgemm/src/: main.cu
benchmarksv2/parboil/benchmarks/spmv/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/spmv/src/: gpu_info.cc  main.cu
benchmarksv2/parboil/benchmarks/stencil/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/stencil/src/: main.cu
benchmarksv2/parboil/benchmarks/tpacf/: CMakeLists.txt
benchmarksv2/parboil/benchmarks/tpacf/src/: main.cu  model.h  model_io.cc
benchmarksv2/parboil/common/: CMakeLists.txt
benchmarksv2/parboil/common/src/: parboil_cuda.c  parboil_opencl.c
benchmarksv2/rodinia/benchmarks/: CMakeLists.txt  interface.h
benchmarksv2/rodinia/benchmarks/cfd/: CMakeLists.txt  Makefile  density  density_energy  euler3d  euler3d.cu  run
benchmarksv2/rodinia/benchmarks/common/: rodinia_common.cpp  rodinia_common.h
benchmarksv2/rodinia/benchmarks/heartwall/: CMakeLists.txt  main.cu
benchmarksv2/rodinia/benchmarks/hotspot/: CMakeLists.txt  hotspot.cu
benchmarksv2/rodinia/benchmarks/hotspot3D/: 3D.cu  CMakeLists.txt  opt1.cu
benchmarksv2/rodinia/benchmarks/lavaMD/: CMakeLists.txt  main.cu
benchmarksv2/rodinia/benchmarks/lavaMD/kernel/: kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper.h
benchmarksv2/rodinia/benchmarks/mummergpu/: CMakeLists.txt  run
benchmarksv2/rodinia/benchmarks/mummergpu/src/: Makefile  PoolMalloc.cpp  common.hpp  mummergpu.cu  mummergpu.hpp  mummergpu_gold.cpp  (+4 more)
benchmarksv2/rodinia/benchmarks/myocyte/: CMakeLists.txt  Makefile  embedded_fehlberg_7_8.cu  main.cu  master.cu  output.txt  work.cu
benchmarksv2/rodinia/benchmarks/pathfinder/: CMakeLists.txt  pathfinder.cu
benchmarksv2/rodinia/benchmarks/streamcluster/: run  streamcluster_cuda.cu  streamcluster_cuda_cpu.cpp  streamcluster_header.hpp
benchmarksv2/rodinia/benchmarks/streamcluster_new/: CMakeLists.txt  streamcluster_cuda.cu  streamcluster_cuda_cpu.cpp  streamcluster_header.hpp
benchmarksv2/run/: .gitattributes  add-logs.sh  send-logs.sh
benchmarksv2/scripts/: config_volta_islip.icnt  gpgpusim.config  kernel_launch.sh  kernel_seq.sh  set_lib.sh  vector-cmake.sh
(+846 files in other folders)
